tests/ui/feature-gates/feature-gate-doc_label_trait.rs
#[doc(label_trait)] //~ ERROR: `#[doc(label_trait)]` is experimental
trait SomeTrait {}

fn main() {}
